--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -9,7 +9,7 @@ Rezept ansehen
 <br/>
 <div style="background-color: white">
     Title: {{viewRecipeCtrl.recipe.title}}<br/>
-    Author: {{viewRecipeCtrl.recipe.author.name}}<br/>
+    Author: {{viewRecipeCtrl.recipe.userId}}<br/>    <!-- TODO filter for userId > Name -->                                       filter für userausgabe / author
     Anzahl Personen: {{viewRecipeCtrl.recipe.numPerson}}<br/>
     Backzeit: {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/>
     Vorbereitungszeit: {{viewRecipeCtrl.recipe.preparationTime | minutesToHoursMinutes}}
