--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -1,3 +1,12 @@
+<div class="row">
+    <div></div>
+</div>
+
+
+
+
+
+
 <div class="page-content searchRecipe">
     <div class="mdl-grid">
         <div class="mdl-cell--8-col">
