searchform reloaded - and nicely colored

--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -1,15 +1,141 @@
-<div class="row">
-    <div></div>
+<div class="searchRecipe" style="background: #FFF;">
+    <div class="row" >
+        <div class="col s5 searchbox">
+            <h3>Rezeptsuche</h3>
+            <!-- Switch Search options-->
+            <div class="right-align">
+                <h5 >Suchoptionen</h5>
+                <div class="switch">
+                    <label>
+                        wenig
+                        <input type="checkbox"
+                               ng-model="showSearchOptions" ng-init="showSearchOptions = false">
+                        <span class="lever"></span>
+                        mehr
+                    </label>
+                </div>
+            </div>
+            <fb-search-form recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-form>
+
+            <!--more search options-->
+            <div class=""  ng-show="showSearchOptions">
+                <div class="divider"></div>
+                <div class="section foodcategory">
+                    <h5>Kategorie auswählen</h5>
+                    <ul>
+                        <li>
+                            <input type="checkbox" class="filled-in" id="suppen">
+                            <label for="suppen">Suppen</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="filled-in" id="desserts">
+                            <label for="desserts">Desserts</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="filled-in" id="hauptspeisen">
+                            <label for="hauptspeisen">Hauptspeisen</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="filled-in" id="vegetarisch">
+                            <label for="vegetarisch">Vegetarisch</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="filled-in" id="burgers">
+                            <label for="burgers">Burgers</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="filled-in" id="salate">
+                            <label for="salate">Salate</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="filled-in" id="sandwitches">
+                            <label for="sandwitches">Sandwitches</label>
+                        </li>
+                    </ul>
+                </div>
+                <div class="divider"></div>
+                <div class="section">
+                    <h5>Bewertung</h5>
+                    <div class="range-field">
+                        <!--<label>1 </label>-->
+                        <input type="range" id="" min="1" max="5" style="width: 80%;"/>
+                        <!--<label>5 </label>-->
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <div class="section">
+                    <h5>Zubereitungszeit</h5>
+                    <!--<label>Zeit</label>-->
+                    <select class="browser-default">
+                        <option value="10">10 - 20 min</option>
+                        <option value="20">20 - 30 min</option>
+                        <option value="30">30 - 40 min</option>
+                        <option value="40">40 - 50 min</option>
+                        <option value="50">1h und mehr</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="col s1">
+            &nbsp;
+        </div>
+        <!--card for add recipe-->
+        <div class="col s6">
+            <h4>Rezepte</h4>
+            <fb-search-resultlist recipes="searchRecipeCtrl.recipes" recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-resultlist>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col s1">
+            &nbsp;
+        </div>
+        <div class="col s4 ">
+            <div class="card  orange lighten-3">
+                <div class="card-title">Neues Rezept</div>
+                <br />
+                <div class="card-image">
+                    <img src="../pictures/kafi_200q.jpg">
+                </div>
+                <div class="card-content">
+                    <p>Registrierte Benutzer können ihre eigene Rezepte erfassen</p>
+                </div>
+                <div class="card-action">
+                    <a class="btn" href="#/addRecipe">erfassen</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s1">
+            &nbsp;
+        </div>
+        <div class="col s3">
+            <div class="card amber lighten-2">
+                <div class="card-title">Rezept der Woche</div>
+                <br />
+                <div class="card-image">
+                    <img src="../pictures/kafi_200q.jpg">
+                </div>
+                <div class="card-content">
+                    <p>Das beste Sandwitch des Kantons Züri - neu mit züribrötli</p>
+                </div>
+                <div class="card-action">
+                    <a class="btn" href="#/addRecipe">zum Rezept</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s4">
+            &nbsp;
+        </div>
+    </div>
 </div>
 
 
-
-
+<!--
 
 
 <div class="page-content searchRecipe">
     <div class="mdl-grid">
-        <div class="mdl-cell--8-col">
+        <div class="mdl-cell&#45;&#45;8-col">
             <h2>Rezeptsuche</h2>
             <fb-search-form recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-form>
             <div>
@@ -21,25 +147,25 @@
                 </label>
             </div>
         </div>
-        <div class="mdl-cell--4-col">
+        <div class="mdl-cell&#45;&#45;4-col">
            <h2>Eigenes Rezept erfassen</h2>
             <br />
             <p>Registrierte Benutzer können eigene Rezepte erfassen</p>
-            <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" href="#/addRecipe">ADD RECIPE</a>
+            <a class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-button&#45;&#45;colored" href="#/addRecipe">ADD RECIPE</a>
         </div>
     </div>
     hide this row as default
     <div class="mdl-grid searchoptions" ng-show="showSearchOptions">
-        <div class="mdl-cell--4-col">
+        <div class="mdl-cell&#45;&#45;4-col">
             <h5>nach Kategorie suche</h5>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Suppe</button>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect ">Dessert</button>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Hautpspeise</button>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Grünzeug</button>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Fleischzeug</button>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Salate</button>
+            <button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect mdl-button&#45;&#45;accent">Suppe</button>
+            <button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect ">Dessert</button>
+            <button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">Hautpspeise</button>
+            <button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">Grünzeug</button>
+            <button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">Fleischzeug</button>
+            <button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">Salate</button>
         </div>
-        <div class="mdl-cell--4-col">
+        <div class="mdl-cell&#45;&#45;4-col">
             <h5>nach Bewertung suchen</h5>
             <br />
             <div class="ratingRecipe">
@@ -55,7 +181,7 @@
             </div>
 
         </div>
-        <div class="mdl-cell--4-col">
+        <div class="mdl-cell&#45;&#45;4-col">
             <h5>nach Kochzeit suchen</h5>
             <br />
 
@@ -69,7 +195,7 @@
         </div>
     </div>
     <div class="mdl-grid">
-        <div class="mdl-cell--12-col">
+        <div class="mdl-cell&#45;&#45;12-col">
             <h3>Rezepte</h3>
             <fb-search-resultlist recipes="searchRecipeCtrl.recipes" recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-resultlist>
         </div>
@@ -78,3 +204,4 @@
 </div>
 
 
+</div>-->
