--- a/Server/public/views/start.tpl.html
+++ b/Server/public/views/start.tpl.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s5">
+    <div class="col s4">
         <div class="card white darken-4">
             <div class="card-content">
                 <!--<div class="card-title">Login</div>-->
@@ -12,8 +12,8 @@
         </div>
     </div>
     <div class="col s5">
-        <div class="card orange lighten-2">
-            <div class="card-content">
+        <div class="card white darken-4">
+            <div class="card-content ">
                 <!--<div class="card-title">Registrieren</div>-->
                 <fb-register-form></fb-register-form>
             </div>
