--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -1,25 +1,39 @@
-Rezept ansehen
-<br/>
-<br/>
-<div ng-controller="SessionController as sessionCtrl">
-    <a href="#/editRecipe/{{viewRecipeCtrl.recipe._id}}"
-       ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.author._id)">EDIT</a>
+<div class="viewRecipe" style="background: #FFF;">
+    <div class="row">
+        <div class="col s10">
+            <h4>Rezept {{viewRecipeCtrl.recipe.title}}</h4>
+            <br/>
+            <p>schönner es adersmal... </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s6">
+            <div ng-repeat="image in viewRecipeCtrl.recipe.images">
+                <img ng-src="{{image.src}}" width="300"/>
+                <br />
+                (Bild von: {{image.author.name}})
+            </div>
+            <div ng-controller="SessionController as sessionCtrl">
+                <a class="btn btn-flat" href="#/editRecipe/{{viewRecipeCtrl.recipe._id}}"
+                   ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.author._id)">EDIT</a>
+            </div>
+        </div>
+        <div class="col s6">
+            <div class="card">
+                <div class="card-content">
+                    <h5>Rezeptdate</h5>
+                    Title: {{viewRecipeCtrl.recipe.title}}<br/>
+                    Author: {{viewRecipeCtrl.recipe.userId}}<br/>    <!-- TODO filter for userId > Name   filter für userausgabe / author -->
+                    Anzahl Personen: {{viewRecipeCtrl.recipe.numPerson}}<br/>
+                    Backzeit: {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/>
+                    Vorbereitungszeit: {{viewRecipeCtrl.recipe.preparationTime | minutesToHoursMinutes}}<br/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s10">
+            <fb-list-recipe-ratings recipe="viewRecipeCtrl.recipe"></fb-list-recipe-ratings>
+        </div>
+    </div>
 </div>
-<br/>
-<br/>
-<div style="background-color: white">
-    Title: {{viewRecipeCtrl.recipe.title}}<br/>
-    Author: {{viewRecipeCtrl.recipe.userId}}<br/>    <!-- TODO filter for userId > Name   filter für userausgabe / author -->
-    Anzahl Personen: {{viewRecipeCtrl.recipe.numPerson}}<br/>
-    Backzeit: {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/>
-    Vorbereitungszeit: {{viewRecipeCtrl.recipe.preparationTime | minutesToHoursMinutes}}
-</div>
-<br/>
-Images:
-<div ng-repeat="image in viewRecipeCtrl.recipe.images">
-    <img ng-src="{{image.src}}" width="300"/>
-    (Bild von: {{image.author.name}})
-</div>
-
-
-<fb-list-recipe-ratings recipe="viewRecipeCtrl.recipe"></fb-list-recipe-ratings>
