recipe add & edit material design

--- a/Server/public/views/start.tpl.html
+++ b/Server/public/views/start.tpl.html
@@ -1,4 +1,7 @@
 <div class="row">
+    <div class="col s2">
+        &nbsp;
+    </div>
     <div class="col s4">
         <div class="card white darken-4">
             <div class="card-content">
@@ -11,13 +14,16 @@
             </div>
         </div>
     </div>
-    <div class="col s5">
+    <div class="col s4">
         <div class="card white darken-4">
-            <div class="card-content ">
+            <div class="card-content">
                 <!--<div class="card-title">Registrieren</div>-->
                 <fb-register-form></fb-register-form>
             </div>
         </div>
+    </div>
+    <div class="col s2">
+        &nbsp;
     </div>
 </div>
 
