--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -1,4 +1,4 @@
-<div class="viewRecipe" style="background: #FFF;">
+<div class="viewrecipe" >
     <div class="row">
         <div class="col s1">
             <i class="medium material-icons prefix">receipt</i>
