--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -1,200 +1,196 @@
 <div class="editRecipe">
-    <div class="row">
-        <div class="col s12 l12">
-                <h3 class="">Rezept bearbeiten</h3>
-            <div>
-                <span ng-show="addRecipe">Rezept editieren</span>
-                <span ng-hide="addRecipe">Rezept hinzufuegen</span>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s5 l5">
-            <h5>Erstes Bild</h5>
-            <div ng-repeat="image in addeditRecipeCtrl.recipe.images">
-                <img class="img-menu" ng-src="{{image.src}}"/>
-            </div>
-            <fb-file-upload recipe="addeditRecipeCtrl.recipe"></fb-file-upload>
-
-
-            <div class="img-buttons">
-                <button class="btn">Bild hinzufügen</button>
-
-                <button class="btn">Bild löschen</button>
-            </div>
-            <br />
-            <div >
-            <p>second file upload suggestion</p>
-                <form action="#">
-                    <div class="file-field input-field">
-                        <input class="file-path validate" type="text" fileread="recipe.image"/>
-                        <div class="btn">
-                            <span>Datei</span>
-                            <input type="file" />
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="col s1 l1">
-            &nbsp;
-        </div>
-        <div class="col s6 l6">
-            <form>
-                <div class="row">
+    <div class="container">
+        <div class="row">
+            <div class="col s12 l12">
+                    <h3 class="">Rezept bearbeiten</h3>
                     <button class="btn right" type="button"
                             ng-click="addeditRecipeCtrl.save()">Menu Speichern
                     </button>
+                <div>
+                    <span ng-show="addRecipe">Rezept editieren</span>
+                    <span ng-hide="addRecipe">Rezept hinzufuegen</span>
                 </div>
-                <div class="row">
-                    <h4 class="right-align">Rezeptname</h4>
-                    <div class="input-field">
-                        <i class="material-icons prefix">mode_edit</i>
-                        <input type="text"  ng-model="addeditRecipeCtrl.recipe.title" id="recipename"/>
-                        <label for="recipename">Name des Rezepts</label>
-                    </div>
-                    <div class="input-field">
-                        <i class="material-icons prefix">mode_edit</i>
-                        <textarea type="text" rows="2" class="materialize-textarea" id="menu-description"
-                                  ng-model="addeditRecipeCtrl.recipe.description"></textarea>
-                        <label for="menu-description">Menu Beschreibung</label>
-                    </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col m12 l6 pixupload">
+                <h4 class="right-align">1. Foto</h4>
+                <div class="divider"></div>
+                <p>Bitte mindestens ein Photo hochladen. Danke!</p>
+                <div ng-repeat="image in addeditRecipeCtrl.recipe.images">
+                    <img class="img-menu" ng-src="{{image.src}}"/>
                 </div>
-                <div class="row">
-                    <div class="col s6">
-                        <h6>Personen</h6>
-                    </div>
-                    <div class=" col s6">
-                        <select ng-model="addeditRecipeCtrl.recipe.numPerson" class="browser-default">
-                            <option value="" disabled selected>Anzahl Personen</option>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                        </select>
-                    </div>
-                </div>
-                <hr/>
-                <div class="row">
-                    <div  class="col s6 ">
-                        <h6>Kategorie</h6>
-                    </div>
-                    <div  class=" col s6">
-                        <select ng-model="addeditRecipeCtrl.recipe.category" class="browser-default">
-                            <option value="" disabled selected>Rezeptkategorie</option>
-                            <option>Suppen</option>
-                            <option>Vorspeise</option>
-                            <option>Hauptgang</option>
-                            <option>Vegi</option>
-                            <option>Salate</option>
-                            <option>Dessert</option>
-                        </select>
-                    </div>
-                </div>
-                <hr/>
-                <div class="row">
-                    <div class="col s6">
-                        <h6>Backzeit</h6>
-                        <i class="material-icons">alarm_on</i>
-                    </div>
-                    <div class="col s6">
-                        <select ng-model="addeditRecipeCtrl.recipe.bakingTime" class="browser-default">
-                            <option value="" disabled selected >Backzeit</option>
-                            <option value="10">10 -20 min</option>
-                            <option value="20">20 -30 min</option>
-                            <option value="30">30 -40 min</option>
-                            <option value="40">40 -50 min</option>
-                            <option value="50">60 + min</option>
-                        </select>
-                    </div>
-                </div>
-                <hr/>
-                <div class="row">
-                    <div class="col s6">
-                        <h6>Zubereitungszeit</h6>
-                    </div>
-                    <div class="col s6">
-                        <select ng-model="addeditRecipeCtrl.recipe.preparationTime" class="browser-default">
-                            <option value="" disabled selected>Zubereitungszeit</option>
-                            <option value="10">10 -20 min</option>
-                            <option value="20">20 -30 min</option>
-                            <option value="30">30 -40 min</option>
-                            <option value="40">40 -50 min</option>
-                            <option value="50">60 + min</option>
-                        </select>
-                    </div>
-                </div>
-                <hr/>
-                <div class="row">
-                    <h4 class="right-align">Zubereitung</h4>
-                    <i class="material-icons">receipt</i>
-                    <p class="">Beschreibe hier Schritt für Schritt der Ablauf des Rezeptes</p>
+                <br />
+                <br />
+                <fb-file-upload recipe="addeditRecipeCtrl.recipe"></fb-file-upload>
 
-                    <div ng-repeat="preparationStep in addeditRecipeCtrl.recipe.preparationSteps" >
-                        <div class="input-field col s12">
-                            <textarea type="text" rows="3" class="materialize-textarea" id="menustep"
-                                      ng-model="preparationStep.text"></textarea>
-                            <label for="menustep">{{preparationStep.position}}. Schritt</label>
+                <div class="img-buttons">
+                    <button class="btn right">hinzufügen</button>
+                    &nbsp;
+                    <button class="btn right disabled">löschen</button>
+                </div>
+                <br />
+                <div >
+                <p>second file upload suggestion</p>
+                    <form action="#">
+                        <div class="file-field input-field">
+                            <input class="file-path validate" type="text" fileread="recipe.image"/>
+                            <div class="btn">
+                                <span>Datei</span>
+                                <input type="file" />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!--right side: Add Recipe-->
+            <div class="col m12 l6">
+                <form class="recipe-form">
+                    <div class="section">
+                        <hr/>
+                        <h4 class="right-align">2. Rezeptname</h4>
+                        <div class="input-field">
+                            <i class="material-icons prefix small">mode_edit</i>
+                            <input type="text"  ng-model="addeditRecipeCtrl.recipe.title" id="recipename"/>
+                            <label for="recipename">Name des Rezepts</label>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix small">mode_edit</i>
+                            <textarea type="text" rows="2" class="materialize-textarea" id="menu-description"
+                                      ng-model="addeditRecipeCtrl.recipe.description"></textarea>
+                            <label for="menu-description">Beschreibung des Menus in ein paar Sätzen</label>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <div class="col s6">
+                            <h6>Personen</h6>
+                        </div>
+                        <div class=" col s6">
+                            <select ng-model="addeditRecipeCtrl.recipe.numPerson" class="browser-default">
+                                <option value="" disabled selected>Anzahl Personen</option>
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                                <option>6</option>
+                            </select>
                         </div>
 
+                        <div  class="col s6 ">
+                            <h6>Kategorie</h6>
+                        </div>
+                        <div  class=" col s6">
+                            <select ng-model="addeditRecipeCtrl.recipe.category" class="browser-default">
+                                <option value="" disabled selected>Rezeptkategorie</option>
+                                <option>Suppen</option>
+                                <option>Vorspeise</option>
+                                <option>Hauptgang</option>
+                                <option>Vegetarisch</option>
+                                <option>Salate</option>
+                                <option>Dessert</option>
+                            </select>
+                        </div>
+
+                        <div class="col s6">
+                            <h6>Backzeit</h6>
+                            <!--<i class="material-icons">alarm_on</i>-->
+                        </div>
+                        <div class="col s6">
+                            <select ng-model="addeditRecipeCtrl.recipe.bakingTime" class="browser-default">
+                                <option value="" disabled selected >Backzeit</option>
+                                <option value="10">10 -20 min</option>
+                                <option value="20">20 -30 min</option>
+                                <option value="30">30 -40 min</option>
+                                <option value="40">40 -50 min</option>
+                                <option value="50">60 + min</option>
+                            </select>
+                        </div>
+                        <div class="col s6">
+                            <h6>Zubereitungszeit</h6>
+                        </div>
+                        <div class="col s6">
+                            <select ng-model="addeditRecipeCtrl.recipe.preparationTime" class="browser-default">
+                                <option value="" disabled selected>Zubereitungszeit</option>
+                                <option value="10">10 -20 min</option>
+                                <option value="20">20 -30 min</option>
+                                <option value="30">30 -40 min</option>
+                                <option value="40">40 -50 min</option>
+                                <option value="50">60 + min</option>
+                            </select>
+                        </div>
+                    </div>
+                    <br>
+                    <hr />
+                    <div class="row">
+                        <!--TODO small packages-->
+                        <h4 class="right-align">3. Zubereitung</h4>
+                        <i class="material-icons small">receipt</i>
+                        <p class="">
+                            Beschreibe hier <strong>Schritt für Schritt</strong> der Ablauf des Rezeptes</p>
+
+                        <div ng-repeat="preparationStep in addeditRecipeCtrl.recipe.preparationSteps" >
+                            <div class="input-field col s12">
+                                <textarea rows="3" class="materialize-textarea" id="menustep"
+                                          ng-model="preparationStep.text"></textarea>
+                                <label for="menustep">{{preparationStep.position}}. Schritt</label>
+                            </div>
+                        </div>
+                        <br />
+                        <button class="btn right"
+                                ng-click="addeditRecipeCtrl.addPreparationStep()">Naechster Schritt
+                        </button>
                     </div>
                     <br />
-                    <button class="btn right"
-                            ng-click="addeditRecipeCtrl.addPreparationStep()">Naechster Schritt
-                    </button>
-                </div>
-                <hr/>
-                <div class="row">
-                    <h4 class="right-align">Zutaten</h4>
-                    <table class="table-ingredients">
-                        <thead>
-                        <tr>
-                            <td>Menge</td>
-                            <td>Einheit</td>
-                            <td>Zutat</td>
-                            <td>Entfernen</td>
-                        </tr>
-                        </thead>
-                        <tr ng-repeat="ingredient in addeditRecipeCtrl.recipe.ingredients">
-                            <td>
-                                <div class="ingredient-count input-field ">
-                                    <input class="mdl-textfield__input" type="number" id="ingredient-type"
-                                           ng-model="ingredient.denomination"/>
-                                    <label for="ingredient-type">Anzahl</label>
-                                </div>
-                            </td>
-                            <td>
-                                <select ng-model="ingredient.unit" class="browser-default">
-                                    <option>EL</option>
-                                    <option>TL</option>
-                                    <option>Prise</option>
-                                    <option>Gramm</option>
-                                    <option>Liter</option>
-                                    <option>Stueck</option>
-                                </select>
-                            </td>
-                            <td>
-                                <div class="input-field">
-                                    <input type="text" class="mdl-textfield__input" ng-model="ingredient.name" id="ingredient-name">
-                                    <label for="ingredient-name">Zutat</label>
-                                </div>
-                            </td>
-                            <td>
-                                <a href="" ng-click="addeditRecipeCtrl.deleteIngredient($index)" class="right-align">[X]</a>
-                            </td>
-                        </tr>
-                    </table>
+                    <hr/>
                     <div class="row">
-                        <div class="col s12">
-                            <button class="btn right"
-                                    ng-click="addeditRecipeCtrl.addIngredient()">weitere Zutaten
-                            </button>
-                        </div>
+                        <h4 class="right-align">4. Zutaten</h4>
+                         <table class="table-ingredients">
+                            <thead>
+                            <tr>
+                                <td>Menge</td>
+                                <td>Einheit</td>
+                                <td>Zutat</td>
+                                <td>Entfernen</td>
+                            </tr>
+                            </thead>
+                            <tr ng-repeat="ingredient in addeditRecipeCtrl.recipe.ingredients">
+                                <td>
+                                    <div class="ingredient-count input-field ">
+                                        <input class="mdl-textfield__input" type="number" id="ingredient-type"
+                                               ng-model="ingredient.denomination"/>
+                                        <label for="ingredient-type">Anzahl</label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <select ng-model="ingredient.unit" class="browser-default">
+                                        <option value="" disabled selected>Einheit</option>
+                                        <option>EL</option>
+                                        <option>TL</option>
+                                        <option>Prise</option>
+                                        <option>Gramm</option>
+                                        <option>Liter</option>
+                                        <option>Stueck</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <div class="input-field">
+                                        <input type="text" class="mdl-textfield__input" ng-model="ingredient.name" id="ingredient-name">
+                                        <label for="ingredient-name">Zutat</label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <a href="" ng-click="addeditRecipeCtrl.deleteIngredient($index)" class="right-align">[&times;]</a>
+                                </td>
+                            </tr>
+                        </table>
+                        <br />
+                        <button class="btn right"
+                                ng-click="addeditRecipeCtrl.addIngredient()">weitere Zutaten
+                        </button>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
