--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -1,10 +1,23 @@
-<div class="searchRecipe" style="background: #FFF;">
-    <div class="row" >
-        <div class="col s5 searchbox">
-            <h3>Rezeptsuche</h3>
-            <!-- Switch Search options-->
-            <div class="right-align">
-                <h5>Suchoptionen</h5>
+<div class="searchRecipe">
+    <div class="container" >
+        <div class="row title-bg">
+            <div class="col s12 l12">
+                <h3 class="">Rezepte auswählen</h3>
+                <span>Suchen und auswählen</span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s10 l10 card" id="searchbox">
+            <div class="col s6 l6">
+                <h4 class="left">Rezeptsuche</h4>
+                <br />
+                <fb-search-form recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-form>
+                <br />
+            </div>
+            <div class="col s4 l4">
+                <!-- Switch Search options-->
+                <h4>Suchoptionen</h4>
                 <div class="switch">
                     <label>
                         wenig
@@ -15,85 +28,94 @@
                     </label>
                 </div>
             </div>
-            <fb-search-form recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-form>
+        </div>
+    </div>
+    <!--more search options-->
+    <div class="row">
+        <div class="col s4"  ng-show="showSearchOptions">
+            <div class="card foodcategory searchplus clearfix">
+                <h5>Kategorie auswählen</h5>
+                <ul class="left">
+                    <li>
+                        <input type="checkbox" class="filled-in" id="suppen">
+                        <label for="suppen">Suppen</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="filled-in" id="desserts">
+                        <label for="desserts">Desserts</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="filled-in" id="hauptspeisen">
+                        <label for="hauptspeisen">Hauptspeisen</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="filled-in" id="vegetarisch">
+                        <label for="vegetarisch">Vegetarisch</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="filled-in" id="burgers">
+                        <label for="burgers">Burgers</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="filled-in" id="salate">
+                        <label for="salate">Salate</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="filled-in" id="sandwitches">
+                        <label for="sandwitches">Sandwitches</label>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-            <!--more search options-->
-            <div class=""  ng-show="showSearchOptions">
-                <div class="divider"></div>
-                <div class="section foodcategory">
-                    <h5>Kategorie auswählen</h5>
-                    <ul>
-                        <li>
-                            <input type="checkbox" class="filled-in" id="suppen">
-                            <label for="suppen">Suppen</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="filled-in" id="desserts">
-                            <label for="desserts">Desserts</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="filled-in" id="hauptspeisen">
-                            <label for="hauptspeisen">Hauptspeisen</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="filled-in" id="vegetarisch">
-                            <label for="vegetarisch">Vegetarisch</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="filled-in" id="burgers">
-                            <label for="burgers">Burgers</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="filled-in" id="salate">
-                            <label for="salate">Salate</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="filled-in" id="sandwitches">
-                            <label for="sandwitches">Sandwitches</label>
-                        </li>
-                    </ul>
-                </div>
-                <div class="divider"></div>
-                <div class="section">
-                    <h5>Bewertung</h5>
-                    <div class="range-field">
-                        <!--<label>1 </label>-->
-                        <input type="range" id="" min="1" max="5" style="width: 80%;"/>
-                        <!--<label>5 </label>-->
-                    </div>
-                </div>
-                <div class="divider"></div>
-                <div class="section">
-                    <h5>Zubereitungszeit</h5>
-                    <!--<label>Zeit</label>-->
-                    <select class="browser-default">
-                        <option value="10">10 - 20 min</option>
-                        <option value="20">20 - 30 min</option>
-                        <option value="30">30 - 40 min</option>
-                        <option value="40">40 - 50 min</option>
-                        <option value="50">1h und mehr</option>
-                    </select>
+        <div class="col s4" ng-show="showSearchOptions">
+            <div class="card searchplus">
+                <h5>Bewertung</h5>
+                <br />
+                <p>suchen Sie nach Bewertung</p>
+                <br />
+                <div class="range-field">
+                    <label>1 </label>
+                    <input type="range" id="" min="1" max="5" style="width: 80%;" />
+                    <label>5 </label>
                 </div>
             </div>
         </div>
-        <div class="col s1">
-            &nbsp;
-        </div>
-        <!--card for add recipe-->
-        <div class="col s6">
-            <h3>Ergebnisse</h3>
-            <fb-search-resultlist recipes="searchRecipeCtrl.recipes" recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-resultlist>
+
+        <div class="col s4" ng-show="showSearchOptions">
+            <div class="card searchplus">
+                <h5>Zubereitungszeit</h5>
+                <!--<label>Zeit</label>-->
+                <select class="browser-default">
+                    <option value="10">10 - 20 min</option>
+                    <option value="20">20 - 30 min</option>
+                    <option value="30">30 - 40 min</option>
+                    <option value="40">40 - 50 min</option>
+                    <option value="50">1h und mehr</option>
+                </select>
+            </div>
         </div>
     </div>
-
+    <!--Search resultlist -->
     <div class="row">
+        <div class="col s10 l10">
+            <div class="card">
+                <div class="card-title text-black">
+                    <h3 class="orange-text">Ergebnisse</h3>
+                </div>
 
+                <fb-search-resultlist recipes="searchRecipeCtrl.recipes" recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-resultlist>
+            </div>
+        </div>
+    </div>
+    <!--teasers-->
+    <div class="row">
         <div class="col s3">
             <div class="card  orange lighten-3">
                 <div class="card-title">Neues Rezept</div>
                 <br />
                 <div class="card-image">
-                    <img src="../pictures/food2_400.jpg">
+                    <img src="pictures/food2_400.jpg">
                 </div>
                 <div class="card-content">
                     <p>Registrierte Benutzer können ihre eigene Rezepte erfassen</p>
@@ -108,7 +130,7 @@
                 <div class="card-title">Rezept der Woche</div>
                 <br />
                 <div class="card-image">
-                    <img src="../pictures/food1_400.jpg">
+                    <img src="pictures/food1_400.jpg">
                 </div>
                 <div class="card-content">
                     <p>Das beste Sandwitch des Kantons Züri - neu mit züribrötli</p>
@@ -118,8 +140,35 @@
                 </div>
             </div>
         </div>
-        <div class="col s6">
-            &nbsp;
+        <div class="col s3">
+            <div class="card  orange lighten-3">
+                <div class="card-title">Mega Fein</div>
+                <br />
+                <div class="card-image">
+                    <img src="pictures/food2_400.jpg">
+                </div>
+                <div class="card-content">
+                    <p>Registrierte Benutzer können ihre eigene Rezepte erfassen</p>
+                </div>
+                <div class="card-action">
+                    <a class="btn" href="#/addRecipe">erfassen</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s3">
+            <div class="card amber lighten-2">
+                <div class="card-title">Rezept der Woche</div>
+                <br />
+                <div class="card-image">
+                    <img src="pictures/food1_400.jpg">
+                </div>
+                <div class="card-content">
+                    <p>Das beste Sandwitch des Kantons Züri - neu mit züribrötli</p>
+                </div>
+                <div class="card-action">
+                    <a class="btn" href="#/addRecipe">zum Rezept</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
