--- a/scss/fb-styles.scss
+++ b/scss/fb-styles.scss
@@ -142,21 +142,41 @@ body {
 }
 /* ----------------VIEW Search Recipe -----*/
 
+/* ----------------VIEW Search Recipe -----*/
 
 .searchRecipe{
-
+  background: #F2F2F2;
+  .title-bg{
+    background: $bgcolor-blue;
+    color: #FFF;
+    height: 150px;
+    width: 100%;
+    h3{
+      font-weight: 100;
+      color: #81d4fa;
+    }
+  }
 }
+#searchbox{
+  margin-left: 0.75rem !important; ;
+}
+
+.searchplus{
+  padding: 1rem;
+  min-height:20rem;
+}
+
 
 #recipeSearchInput{
   width: 70%;
 }
 
 .foodcategory ul{
-  padding-left: 1rem;
+  padding-left: 2rem;
   padding-right: 1rem;
 }
 .foodcategory li{
-  display: inline;
+  display: block;
   padding-right: 1.5rem;
 }
 
@@ -164,7 +184,6 @@ body {
 .find-recipe{
 
 }
-
 
 
 /*details*/
